Добавление информации о приборе ДГС ЭРИС-230 газоанализатор стационарный

--- a/Продукция/ERIS Simple X/Общая информация.md
+++ b/Продукция/ERIS Simple X/Общая информация.md
@@ -1,4 +1,5 @@
-Источник информации - https://eriskip.com/ru/product/eris-simple-x1
+Первоисточник - https://eriskip.com/ru/product/eris-simple-x1
+___
 # Общая информация
 
 
