Добавлены новые виды продукции

--- a/О компании.md
+++ b/О компании.md
@@ -76,7 +76,7 @@
 - **Ремонт оборудования**:
   - Адрес: 617762, Пермский край, г. Чайковский, ул. Промышленная, д. 8/25
   - Контактное лицо: Брюханова Наталья Олеговна, +7 (34241) 6-55-11 доб. 101
-- **Прайс-лист**: Обратиться в отдел продаж через email **info@eriskip.ru**
+- **Прайс-лист**: Обратиться в отдел продаж через email info@eriskip.ru
 - **DD файлы для датчиков**: [https://eriskip.com/ru/files-library?category=2](https://eriskip.com/ru/files-library?category=2)
 
 ## Часто задаваемые вопросы
