--- a/Продукция/ДГС ЭРИС-230 газоанализатор стационарный/Программное обеспечение.md
+++ b/Продукция/ДГС ЭРИС-230 газоанализатор стационарный/Программное обеспечение.md
@@ -1,16 +1,8 @@
- [Конфигуратор ДГС. Для ДГС ЭРИС мод.1 Выпуск 2015, 2016 года. Пользовательская версия (EXE / 12.10MB)](https://eriskip.com/uploads/files/ru/2/78/dgs-mod1user.exe)
-
- [ДГС ЭРИС DD библиотеки HART + инструкция (ZIP / 1.05MB)](https://eriskip.com/uploads/files/ru/2/115/eris-dd-files-hart-instruction.zip)
-
- [ИНСТРУКЦИЯ: Конфигуратор ДГС для ДГС ЭРИС мод.1 Выпуск 2015, 2016 года (PDF / 261.23kB)](https://eriskip.com/uploads/files/ru/2/79/manual-utilities-dgs210230-mod1.pdf)
-
- [ИНСТРУКЦИЯ: Конфигуратор ДГС. Для ДГС ЭРИС Выпуск от 2017 года. (PDF / 2.13MB)](https://eriskip.com/uploads/files/ru/1/142/po-ekspluatacii-po.pdf)
-
- [HART DD-библиотеки для ПК и коммуникаторов Yokogawa, Emerson Trex 06.03.2020 (ZIP / 200.13kB)](https://eriskip.com/uploads/files/ru/2/312/hart-dd-biblioteki-dla-pk-i-kommunikatorov-yokogawa-emerson-trex-06-03-2020.zip)
-
- [Конфигуратор ДГС. Для ДГС ЭРИС выпуск от 2017 года. Пользовательская версия. (ZIP / 3.68MB)](https://eriskip.com/uploads/files/ru/2/280/configuratordgslight-v-2-71.zip)
-
- [DGS ERIS 200 HART DTM (EXE / 14.16MB)](https://eriskip.com/uploads/files/ru/2/285/faststone-image-viewer-lnk.exe)
-
- [DGS ERIS 200 HART DTM Certificate (PDF / 100.96kB)](https://eriskip.com/uploads/files/ru/2/286/certificate-2019-2001-1.pdf)
- 
+# **Программное обеспечение** **ДГС ЭРИС-230**
+### Где найти программное обеспечение для ДГС ЭРИС-230? 
+**Программное обеспечение** **ДГС ЭРИС-230** можно найти на просторе Google Play:
+- ERIS DGS Конфигуратор для Android - [скачать с Google Play](https://play.google.com/store/apps/details?id=com.eriskip.dgsandroidcfg&hl=ru&gl=US)
+Конфигуратор для стационарных газоанализаторов ДГС ЭРИС серии 200.  
+Данное приложение предназначено для настройки основных параметров работы устройства.  
+Газоанализаторы ДГС ЭРИС серии 200 позволяют производить всесторонний мониторинг опасных концентраций горючих, токсичных газов и кислорода в потенциально опасных местах. Датчики могут монтироваться в помещениях и на открытых площадках, относящихся к зонам 1 и 2.  
+Приложение отображает текущую концентрацию, статусы и основные параметры устройств, в радиусе действия Bluetooth(BLE).
